# mumpscpp

./: CMakeLists.txt
conan-recipe/: conanfile.py  test.bat
conan-recipe/test_package/: CMakeLists.txt  conanfile.py  example.cpp
projects/: readme.md
projects/mumpscpp/include/: EigenVector.h  UblasVectorAdaptor.h  mumpsLibraries.h  mumpscpp.h
projects/mumpscpp/include/mumpscpp/: UblasCoordinateAdaptor.h
projects/tester/: CMakeLists.txt
projects/tester/source/: LU.cpp  main.cpp
